<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="activity"
            type="com.soodkartik.mvppattern.modules.login.activity.LoginActivity" />

        <variable
            name="loginRequest"
            type="com.soodkartik.mvppattern.modules.login.models.request.LoginRequest" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        tools:context=".modules.login.activity.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/background_layout"
            android:orientation="vertical"
            android:padding="@dimen/padding_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_6"
                android:text="@string/username_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tx_18" />

            <EditText
                android:id="@+id/username_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:hint="@string/username_text"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding_10"
                android:text="@={loginRequest.username}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_6"
                android:text="@string/password_text"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/tx_18" />

            <EditText
                android:id="@+id/password_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edittext"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="@dimen/padding_10"
                android:text="@={loginRequest.password}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:background="@drawable/background_button"
                android:onClick="@{(view)->activity.onSubmitButtonClick(view,loginRequest)}"
                android:text="@string/submit_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/tx_18" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@null"
            android:onClick="@{(view)->activity.onSignUpButtonCLick(view)}"
            android:text="@string/register_text"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/tx_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>